2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: fixed lost semi colon.
	
	* godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed lost include
	autocomplete javascript file.
	
	Fixes: #3013425

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/license/pandora_info_pt_BR.html,
	  general/license/pandora_info_es.html,
	  general/license/pandora_info_ast.html: Added to repository.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/license/pandora_info_ast_es.html,
	  general/license/pandora_info_es_es.html,
	  general/license/pandora_info_es_la.html,
	  general/license/pandora_info_pt_br.html: Removed from repository.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/footer.php: Show the English license if a localized version
	  is not available.

2010-06-09  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_manager.php: Fixed the agent icons on 
	agent setup for bug: 3013426

2010-06-09  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/module_manager_editor_wmi.php: Added missing '_'.

2010-06-08  Raúl Mateos <raulofpandora@gmail.com>

	* operation/incidents/incident_detail.php,
	operation/incidents/incident.php: cleaned code, improved button usability.
	TODO: Use links instead buttons where adding notes.

	* operation/incidents/events.php: Cleaned code.

2010-06-08  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql, DEBIAN/control,
	  DEBIAN/make_deb_package.sh, include/config_process.php,
	  pandora_console.spec: Update version strings.

2010-06-08  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.main.php: changed the text of button
	for more clear mean.

2010-06-08  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/conffiles: re-changed the conffiles for try solved a bug in the
	install DEB package.

2010-06-08  Miguel de Dios  <miguel.dedios@artica.es>
